Provider journey - added to v4

--- a/app/views/v4/employer/create/display-employer.html
+++ b/app/views/v4/employer/create/display-employer.html
@@ -1,11 +1,11 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Which employer name do you want on your vacancy? - Your apprentice adverts - {{serviceName}} - GOV.UK
 {% endblock %}
+
 {% block beforeContent %}
 {{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
