--- a/app/views/v4/provider/create/about-employer.html
+++ b/app/views/v4/provider/create/about-employer.html
@@ -1,7 +1,7 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Add some information - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -12,17 +12,20 @@ Manage apprentices
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">About {{data.orgName}}</h1>
-        {% if data.EmployerDescription and data.journey != 'new' %}
+        <h1 class="govuk-heading-xl">Add some information about {{data.orgName}}</h1>
+        <!--{% if data.EmployerDescription and data.journey != 'new' %}
         <p class="govuk-body">Updating the employer information will also update the employer information on any unapproved vacancies eg. draft, pending review or rejected vacancies.</p>
         {%else%}
         <p class="govuk-body">You can add information about your organiasation. This information will be saved and automatically applied for any new vacancy for this organisation.</p>
-        {%endif%}
+        {%endif%}-->
         <form method="post">
           <div class="govuk-character-count govuk-input--width-50" data-module="character-count" data-minlength="50" data-maxlength="500">
             <div class="govuk-form-group">
               <label class="govuk-label visiual" for="EmployerDescription">Tell us about the organisation</label>
               <textarea class="govuk-textarea js-character-count" rows="5" data-val-length-max="500" id="EmployerDescription" name="EmployerDescription">{% if data.EmployerDescription and data.journey != 'new' %}{{ data.EmployerDescription}}{%endif%}</textarea>
+              <div id="shortDescription-hint-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
+                You can enter up to 500 characters
+              </div>
             </div>
           </div>
           <div class="govuk-form-group">
@@ -35,7 +38,8 @@ Manage apprentices
             {% if data.edit=="yes"%}
             <input type="submit" value="Save and continue" class="govuk-button save-button" data-automation="btn-continue">
             {% else%}
-            <a href="disability" class="govuk-button" data-module="govuk-button">Save and continue</a>
+            <!--<a href="disability" class="govuk-button" data-module="govuk-button">Save and continue</a>-->
+            <a href="contact" class="govuk-button" data-module="govuk-button">Save and continue</a>
             {% endif %}
             <a class="govuk-body das-button--link" href="vacancy-preview/" data-automation="link-cancel">Cancel</a>
           </div>
@@ -45,6 +49,4 @@ Manage apprentices
 
   </main>
 </div>
-
-{% block help %}{% include "includes/service-help.html" %}{% endblock %}
 {% endblock %}
