--- a/app/views/v4/provider/create/employer.html
+++ b/app/views/v4/provider/create/employer.html
@@ -1,18 +1,18 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Which employer name do you want on your vacancy? - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
+
 {% block beforeContent %}
 {{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Which employer name do you want on your advert?</h1>
+    <h1 class="govuk-heading-xl">Which employer name do you want on your vacancy?</h1>
     <form method="POST">
         {% if  data.NumberOfEntities > 10 %}
 				<fieldset class="govuk-fieldset">
@@ -129,7 +129,7 @@ Manage apprentices
                 {% endif %}
 
                 {% if query.edit != "yes"%}
-                <a href="display-employer" type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue">Save and continue</a><br /><br />
+                <a href="about-employer" type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue">Save and continue</a><br /><br />
                   <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
                 {%else%}
                   <input type="submit" class="govuk-button" data-module="govuk-button" name="previewButton" value="Save and continue"/><br /><br />
@@ -140,7 +140,7 @@ Manage apprentices
 
   </div>
 </div>
-
+{% endblock %}
 
 {% block pageScripts %}
 {{super()}}
