--- a/app/views/v4/provider/create/positions.html
+++ b/app/views/v4/provider/create/positions.html
@@ -1,11 +1,11 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+How many positions are there for this apprenticeship? - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
+
 {% block beforeContent %}
 {{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
