--- a/app/views/v4/provider/create/task-list.html
+++ b/app/views/v4/provider/create/task-list.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Create an apprenticeship vacancy - Recruitment - {{serviceName}} - GOV.UK
+Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent%}
@@ -14,7 +14,7 @@ Create an apprenticeship vacancy - Recruitment - {{serviceName}} - GOV.UK
   <div class="govuk-grid-column-two-thirds">
     {% if data.title %}<span class="govuk-caption-xl">{{data.title}}</span>{% endif%}
     <h1 class="govuk-heading-xl">
-      Create an apprenticeship vacancy
+      Create a vacancy
     </h1>
     
     <!--<p class="govuk-body">
@@ -320,7 +320,7 @@ Create an apprenticeship vacancy - Recruitment - {{serviceName}} - GOV.UK
         <ul class="app-task-list__items">
           <!--<li class="app-task-list__item" style="border-top:none;">
             Content explaining that the user needs to add employer information
-          </li>-->
+          </li>
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section3 == "completed" %}
@@ -331,16 +331,11 @@ Create an apprenticeship vacancy - Recruitment - {{serviceName}} - GOV.UK
                 Which organisation is this vacancy for?
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
-          </li>
+          </li>-->
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              {% if data.section4 == "completed" %}
+              {% if data.section3 == "completed" %}
               <a href="employer?return_url=task-list" aria-describedby="list-convictions-status">
                 Which employer name do you want on your vacancy?
               </a>
