--- a/app/views/v4/employer/create/positions.html
+++ b/app/views/v4/employer/create/positions.html
@@ -1,7 +1,7 @@
 {% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
 
 {% block pageTitle %}
-Manage apprentices
+How many positions are there for this apprenticeship? - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
