--- a/app/views/v4/provider/create/contact.html
+++ b/app/views/v4/provider/create/contact.html
@@ -1,29 +1,18 @@
 
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
-{% endblock %}
-{% block beforeContent %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
-  </div>
-</div>
+Add contact information - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
 
- 
-
-
-
     <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-xl"><span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Developer apprenticeship{% endif %}</span>
+            <h1 class="govuk-heading-xl"><span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
               Add contact information for {% if data.user == "employer" %}{{data.orgName}}{% else %}{{ data.providerName}}{% endif %} (optional)
             </h1>
-            <form method="post" class="dirty">
+            <form method="post" action="application-process">
               <div class="govuk-form-group">
                   <label class="govuk-label" for="EmployerContactName">Contact name (optional)</label>
                   <input class="govuk-input govuk-input--width-20" maxlength="100" type="text" id="EmployerContactName" name="EmployerContactName" value="{% if data.EmployerContactName %}{{data.EmployerContactName}}{%endif%}">
@@ -37,18 +26,11 @@ Manage apprentices
                   <input class="govuk-input govuk-input--width-20" type="tel" maxlength="16" id="EmployerContactPhone" name="EmployerContactPhone" value="{% if data.EmployerContactPhone %}{{data.EmployerContactPhone}}{%endif%}">
               </div>
               <div class="govuk-form-group">
-                  <input type="submit" value="Save and preview" class="govuk-button save-button" data-automation="btn-continue">
+                  <input type="submit" value="Save and continue" class="govuk-button save-button" data-automation="btn-continue">
                   <a class="govuk-body das-button--link" href="vacancy-preview/" data-automation="link-cancel">Cancel</a>
               </div>
             </form>
-              {% block help %}{% include "includes/service-help.html" %}{% endblock %}
           </div>
-
       </div>
   </div>
-
-
-
 {% endblock %}
-
-<
