--- a/app/views/v4/provider/create/dates.html
+++ b/app/views/v4/provider/create/dates.html
@@ -1,15 +1,13 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Important dates - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
+
 {% block beforeContent %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
-  </div>
-</div>
+{{super()}}
 {% endblock %}
+
 {% block content %}
 
 <div class="govuk-grid-row">
