--- a/app/views/v4/provider/create/display-employer.html
+++ b/app/views/v4/provider/create/display-employer.html
@@ -1,18 +1,18 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Which employer name do you want on your vacancy? - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
+
 {% block beforeContent %}
 {{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Which employer name do you want on your advert?</h1>
+    <h1 class="govuk-heading-xl">Which employer name do you want on your vacancy?</h1>
     <form method="post">
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
