--- a/app/views/v4/provider/create/duration.html
+++ b/app/views/v4/provider/create/duration.html
@@ -1,14 +1,11 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
+
 {% block beforeContent %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
-  </div>
-</div>
+{{super()}}
 {% endblock %}
 
 {% block content %}
