--- a/app/views/v4/provider/create/qualifications.html
+++ b/app/views/v4/provider/create/qualifications.html
@@ -1,7 +1,7 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+What qualifications would you like the applicant to have? - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -67,11 +67,17 @@ Manage apprentices
                   <div class="govuk-radios govuk-radios--inline">
                     <div class="govuk-radios__item">
                       <input class="govuk-radios__input" id="WeightingYes" type="radio" value="Essential" data-display="Essential" name="Weighting" data-automation="radio-weighting-yes" {% if (data.hasError and data.Weighting=="Essential") or query.editWeight== "Essential" %}checked="checked"{% endif %}>
-                      <label class="govuk-label govuk-radios__label" for="WeightingYes">Essential <span class="govuk-hint">The applicant must have this qualification to be considered</span></label>
+                      <label class="govuk-label govuk-radios__label" for="WeightingYes">Essential</label>
+                      <div id="WeightingNo-hint" class="govuk-hint govuk-radios__hint">
+                        The applicant must have this qualification to be considered
+                      </div>
                     </div>
                     <div class="govuk-radios__item">
                       <input class="govuk-radios__input" id="WeightingNo" type="radio" value="Desired" data-display="Desired" name="Weighting" data-automation="radio-weighting-no" {% if (data.hasError and data.Weighting=="Desired" ) or query.editWeight == "Desired"%}checked="checked"{% endif %}>
-                      <label class="govuk-label govuk-radios__label" for="WeightingNo">Desirable<span class="govuk-hint">This qualification would be a nice to have, but is not required</span></label>
+                      <label class="govuk-label govuk-radios__label" for="WeightingNo">Desirable</label>
+                      <div id="WeightingNo-hint" class="govuk-hint govuk-radios__hint">
+                        This qualification would be a nice to have, but is not required
+                      </div>
                     </div>
                   </div>
               </fieldset>
@@ -91,5 +97,4 @@ Manage apprentices
           </div>
       </div>
 
-{% block help %}{% include "includes/service-help.html" %}{% endblock %}
 {% endblock %}
