--- a/app/views/v4/provider/create/skills.html
+++ b/app/views/v4/provider/create/skills.html
@@ -1,4 +1,4 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
 Manage apprentices
@@ -16,7 +16,7 @@ Manage apprentices
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
-        <h1 class="govuk-heading-xl">What skills and personal qualities does the applicants need to have?</h1>
+        <h1 class="govuk-heading-xl">What skills and personal qualities does the applicant need to have?</h1>
         <form method="post" action="skills">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--s" id="SkillsHeading"></legend>
           {{data.Skills}}
@@ -110,7 +110,8 @@ Manage apprentices
                 <label class="govuk-label" for="AddCustomSkillName">Add a new skill or personal quality</label>
                 <span class="error-message field-validation-valid" data-valmsg-for="AddCustomSkillName" data-valmsg-replace="true"></span>
                 <input value="" type="text" class="govuk-input govuk-input--width-20" maxlength="30" id="AddCustomSkillName" name="AddCustomSkillName">
-                <button name="AddCustomSkillAction" id="add-custom-skill" value="AddCustomSkill" type="submit" class="govuk-button govuk-button-secondary save-button" data-module="govuk-button">&plus; Add this skill</button>
+                <!--<button name="AddCustomSkillAction" id="add-custom-skill" value="AddCustomSkill" type="submit" class="govuk-button govuk-button-secondary save-button" data-module="govuk-button">&plus; Add this skill</button>-->
+                <button class="govuk-button govuk-button--secondary" disabled>&plus; Add this skill</button>
             </div>
               </div>
               <br>
