Employer journey - put in quick fixes for training select and check answers link

--- a/app/views/v4/employer/create/training-select.html
+++ b/app/views/v4/employer/create/training-select.html
@@ -21,7 +21,7 @@ What training will the apprentice take? - Your apprenticeship adverts - {{servic
           {% endfor %}
         </div>
 
-        <form method="post">
+        <form method="post" action="training-confirm">
           <fieldset class="govuk-fieldset">
             <p class="govuk-body">If you have not found training for this apprenticeship, you can ​use the <a class="govuk-link" href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" target="_blank">Find apprenticeship training service (opens in new tab or window)</a>.</p>
             <div class="govuk-form-group search-field search-field-darker">
