--- a/app/views/v4/employer/create/task-list.html
+++ b/app/views/v4/employer/create/task-list.html
@@ -404,16 +404,17 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
         </h2>
         <ul class="app-task-list__items">
           <li class="app-task-list__item">
-            <span class="task-list-submit-disabled">
+            <!--<span class="task-list-submit-disabled">
               <span class="app-task-list__task-name">
                 Check your answers and submit your advert
               </span>
               <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="submit-pay-status">Cannot start yet</strong>
-            </span>
-            <span class="task-list-submit-enabled" style="display:none">
+            </span>-->
+            <!--<span class="task-list-submit-enabled" style="display:none">-->
+              <span class="task-list-submit-enabled">
               <span class="app-task-list__task-name">
                   <!--<a href="vacancy-preview" aria-describedby="list-convictions-status">-->
-                    <a href="check-your-answers" aria-describedby="list-convictions-status">  
+                <a href="check-your-answers" aria-describedby="list-convictions-status">  
                   Check your answers and submit your advert
                 </a>
               </span>
