--- a/app/views/v4/provider/create/std-select.html
+++ b/app/views/v4/provider/create/std-select.html
@@ -23,7 +23,8 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
           {% endfor %}
         </div>
 
-        <form method="post" action="std-confirm">
+        <form method="post">
+        <!--<form method="post" action="std-confirm">-->
           <fieldset class="govuk-fieldset">
             <p class="govuk-body">If you have not found training for this apprenticeship, you can ​use the <a class="govuk-link" href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" target="_blank">Find apprenticeship training service (opens in new tab or window)</a>.</p>
             <div class="govuk-form-group search-field search-field-darker">
