--- a/app/views/v4/employer/create/about-employer.html
+++ b/app/views/v4/employer/create/about-employer.html
@@ -18,7 +18,8 @@ Add some information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
       <div class="govuk-character-count govuk-input--width-50" data-module="character-count" data-minlength="50" data-maxlength="500">
         <div class="govuk-form-group">
           <label class="govuk-label visiual" for="EmployerDescription">Tell us about your organisation</label>
-          <textarea class="govuk-textarea js-character-count" rows="5" data-val-length-max="500" id="EmployerDescription" name="EmployerDescription">{% if data.EmployerDescription and data.journey != 'new' %}{{ data.EmployerDescription}}{%endif%}</textarea>
+          <!--<textarea class="govuk-textarea js-character-count" rows="5" data-val-length-max="500" id="EmployerDescription" name="EmployerDescription">{% if data.EmployerDescription and data.journey != 'new' %}{{ data.EmployerDescription}}{%endif%}</textarea>-->
+          <textarea class="govuk-textarea js-character-count" rows="5" data-val-length-max="500" id="EmployerDescription" name="EmployerDescription"></textarea>
           <div id="shortDescription-hint-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
             You can enter up to 500 characters
           </div>
